# Hi-EM

./: .env.example  .gitignore  CLAUDE.md  README.md  brief.md  conftest.py  handoff.md  phase-2-full-design.md  plan.md  pyproject.toml  report.md  requirements.txt
configs/: hiem.json
context/: 00-sem-paper.md  01-hi-em-design.md  02-math-model.md  03-architecture.md  04-benchmarks.md  05-open-questions.md  06-decision-log.md  sem-equations.md
notebooks/: phase-1-tiage.ipynb
outputs/: benchmark-analysis.md  phase-1-clustering-quality.json  phase-1-tiage-sweep.json  phase-1-topiocqa-anchors.json  phase-1-topiocqa-contextualized.json  phase-1-topiocqa-encoder.json  phase-1-topiocqa-multisignal.json  phase-1-topiocqa-sweep.json  phase-1-topiocqa-variants.json  phase-1-topiocqa.md  phase-2-full-design.md  phase-3-smoke.md  phase-4-full-full.jsonl  phase-4-full-full.jsonl.judged.jsonl  phase-4-full-full.jsonl.wandb-run-id  phase-4-full-hi-em.jsonl  phase-4-full-hi-em.jsonl.judged.jsonl  phase-4-full-hi-em.jsonl.wandb-run-id  phase-4-full-rag.jsonl  phase-4-full-rag.jsonl.judged.jsonl  phase-4-full-rag.jsonl.wandb-run-id  phase-4-full-sliding.jsonl  phase-4-full-sliding.jsonl.judged.jsonl  phase-4-full-sliding.jsonl.wandb-run-id  phase-4-sanity-full.jsonl  phase-4-sanity-full.jsonl.judged.jsonl  phase-4-sanity-full.jsonl.wandb-run-id  phase-4-sanity-hi-em.jsonl  phase-4-sanity-hi-em.jsonl.judged.jsonl  phase-4-sanity-hi-em.jsonl.wandb-run-id  phase-4-sanity-nothink-full.jsonl  phase-4-sanity-nothink-full.jsonl.judged.jsonl  phase-4-sanity-nothink-full.jsonl.wandb-run-id  (+17 more)
(+62 files in other folders)
